--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en"> 
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#a673a6">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
     <link rel="stylesheet" href="index.css">
